adding normal qnet agent

--- a/ELM-RL/EQLM/test_nb.ipynb
+++ b/ELM-RL/EQLM/test_nb.ipynb
@@ -19,26 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from agent import EQLMAgent\n",
+    "from q_agents import QAgent\n",
+    "from networks import QNet, ELMNet\n",
     "from environment import Environment\n",
-    "from networks import ELMNet\n",
-    "from tqdm import trange, tnrange"
+    "from tqdm.notebook import trange"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def do_run(agent, env, N_ep):\n",
     "    R_ep = []\n",
-    "    t = tnrange(N_ep, desc='bar_desc', leave=True)\n",
+    "    t = trange(N_ep, desc='bar_desc', leave=True)\n",
     "    for ep_no in t:\n",
     "        s = env.reset()\n",
     "        done = False\n",
@@ -58,21 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/callum/.local/lib/python3.6/site-packages/ipykernel_launcher.py:3: TqdmDeprecationWarning: Please use `tqdm.notebook.trange` instead of `tqdm.tnrange`\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7776191ca47146b59372dc8bd949b405",
+       "model_id": "3abc7ec48aeb4c3b8edea46f39a135ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,16 +86,9 @@
    "source": [
     "N_ep = 800\n",
     "env = Environment()\n",
-    "agent0 = EQLMAgent(env, memory_size=5, N_hid=10)\n",
+    "agent0 = QAgent(env, net_type='ELMNet', memory_size=10000, N_hid=10)\n",
     "\n",
-    "R_ep, agent0, env = do_run(agent0, env, N_ep)\n",
-    "# s = env.reset()\n",
-    "# for _ in range(20):\n",
-    "#     a = agent0.action_select(s)\n",
-    "#     s,r,d,_ = env.step(a)\n",
-    "#     agent0.update(s,r,d)\n",
-    "#     if d:\n",
-    "#         s = env.reset()"
+    "R_ep, agent0, env = do_run(agent0, env, N_ep)"
    ]
   },
   {
