sort bug in QAgent and adding run agent file

--- a/ELM-RL/EQLM/test_nb.ipynb
+++ b/ELM-RL/EQLM/test_nb.ipynb
@@ -19,20 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from tqdm.notebook import trange\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from q_agents import QAgent\n",
     "from networks import QNet, ELMNet\n",
     "from environment import Environment\n",
-    "from tqdm.notebook import trange"
+    "from run_agent import do_run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3abc7ec48aeb4c3b8edea46f39a135ac",
+       "model_id": "4f854a08467b493c93403e038651d973",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,9 +89,19 @@
    "source": [
     "N_ep = 800\n",
     "env = Environment()\n",
-    "agent0 = QAgent(env, net_type='ELMNet', memory_size=10000, N_hid=10)\n",
+    "agent = QAgent(env, net_type='QNet', alpha = 0.0065, update_steps=70, N_hid=29, eps0=0.67, gamma=0.99, clip_norm=1.0, memory_size=10000, minibatch_size=26)\n",
+    "# agent = QAgent(env, net_type='ELMNet', update_steps=50, N_hid=28, eps0=0.66, gamma=0.66, memory_size=10000, minibatch_size=4)\n",
     "\n",
-    "R_ep, agent0, env = do_run(agent0, env, N_ep)"
+    "R_ep, agent, env = do_run(agent, env, N_ep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.nn.sess.close()"
    ]
   },
   {
