--- a/ELM-RL/EQLM/test_nb.ipynb
+++ b/ELM-RL/EQLM/test_nb.ipynb
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f854a08467b493c93403e038651d973",
+       "model_id": "9547dcbc7706430782879985ff3de1eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,8 +89,8 @@
    "source": [
     "N_ep = 800\n",
     "env = Environment()\n",
-    "agent = QAgent(env, net_type='QNet', alpha = 0.0065, update_steps=70, N_hid=29, eps0=0.67, gamma=0.99, clip_norm=1.0, memory_size=10000, minibatch_size=26)\n",
-    "# agent = QAgent(env, net_type='ELMNet', update_steps=50, N_hid=28, eps0=0.66, gamma=0.66, memory_size=10000, minibatch_size=4)\n",
+    "# agent = QAgent(env, net_type='QNet', alpha = 0.0065, update_steps=70, N_hid=29, eps0=0.67, gamma=0.99, clip_norm=1.0, memory_size=10000, minibatch_size=26)\n",
+    "agent = QAgent(env, net_type='ELMNet', update_steps=50, N_hid=28, eps0=0.66, gamma=0.66, memory_size=10000, minibatch_size=4)\n",
     "\n",
     "R_ep, agent, env = do_run(agent, env, N_ep)"
    ]
