adding lander gym module

--- a/RL-agents/lander_full_runs.ipynb
+++ b/RL-agents/lander_full_runs.ipynb
@@ -297,7 +297,7 @@
     "    print('Agent ' + str(agent_no))\n",
     "    \n",
     "    N_ep = 600\n",
-    "    env = LanderEnvironment()\n",
+    "    env = LanderEnvironment()W\n",
     "    agent = QNetAgentDemo(agent_config(),network_config(),env,demo_exp)\n",
     "    \n",
     "    R_ep, agent, env = do_run(agent, env, N_ep)\n",
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
