updating EQLM module for lander testing

--- a/lander-RL/running_lander_nb.ipynb
+++ b/lander-RL/running_lander_nb.ipynb
@@ -37,10 +37,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import QLearn\n",
-    "from QLearn.q_agents import HeuristicAgent, QAgent, ReplayMemory\n",
-    "from QLearn.environment import Environment\n",
-    "from QLearn.run_agent import do_run, heuristic_demo, agent_demo, Reward"
+    "import QLearn\n",
+    "# from QLearn.q_agents import HeuristicAgent, QAgent, ReplayMemory\n",
+    "# from QLearn.environment import Environment\n",
+    "# from QLearn.run_agent import do_run, heuristic_demo, agent_demo, Reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'env'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-9ac18c9600c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQLearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQAgent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'env'"
+     ]
+    }
+   ],
+   "source": [
+    "QLearn.QAgent()"
    ]
   },
   {
