fixing wee run bug

--- a/Gaudet-Lander/run_qnet_nb.ipynb
+++ b/Gaudet-Lander/run_qnet_nb.ipynb
@@ -581,7 +581,9 @@
       "*** ATT VIO TYPE CNT:  [   0. 2087. 6252.]\n",
       "*** ATT VIO TYPE CNT:  [   0. 2105. 6334.]\n",
       "*** ATT VIO TYPE CNT:  [   0. 2136. 6404.]\n",
-      "*** ATT VIO TYPE CNT:  [   0. 2169. 6471.]\n"
+      "*** ATT VIO TYPE CNT:  [   0. 2169. 6471.]\n",
+      "*** ATT VIO TYPE CNT:  [   0. 2193. 6547.]\n",
+      "*** ATT VIO TYPE CNT:  [   0. 2214. 6626.]\n"
      ]
     }
    ],
